--- a/html/jie/add.html
+++ b/html/jie/add.html
@@ -37,7 +37,7 @@
                         <a href="../user/message.html">
                             <i class="iconfont icon-tongzhi" style="top: 4px;"></i>我的通知
                             <span class="layui-badge-dot"></span>
-                            <span id="tip-header-notice"  style="display:none">
+                            <span id="tip-header-notice" style="display:none">
                                  <span class="layui-badge-dot"></span>
                             </span>
                         </a>
@@ -82,15 +82,15 @@
                                         </select>
                                     </div>
                                 </div>
-<!--                                <div class="layui-col-md9">-->
-<!--                                    <label for="L_title" class="layui-form-label">标题</label>-->
-<!--                                    <div class="layui-input-block">-->
-<!--                                        <input type="text" id="L_title" name="title" required-->
-<!--                                               lay-verify="required" autocomplete="off"-->
-<!--                                               class="layui-input">-->
-<!--                                        &lt;!&ndash; <input type="hidden" name="id" value="{{d.edit.id}}"> &ndash;&gt;-->
-<!--                                    </div>-->
-<!--                                </div>-->
+                                <!--                                <div class="layui-col-md9">-->
+                                <!--                                    <label for="L_title" class="layui-form-label">标题</label>-->
+                                <!--                                    <div class="layui-input-block">-->
+                                <!--                                        <input type="text" id="L_title" name="title" required-->
+                                <!--                                               lay-verify="required" autocomplete="off"-->
+                                <!--                                               class="layui-input">-->
+                                <!--                                        &lt;!&ndash; <input type="hidden" name="id" value="{{d.edit.id}}"> &ndash;&gt;-->
+                                <!--                                    </div>-->
+                                <!--                                </div>-->
                             </div>
                             <div class="layui-form-item layui-form-text">
                                 <div class="layui-input-block">
@@ -99,6 +99,7 @@
                             style="height: 260px;"></textarea>
                                 </div>
                             </div>
+                            <input type="hidden" name="open" value="3">
                             <div class="layui-form-item">
                                 <!--                                <label for="L_vercode" class="layui-form-label">验证码</label>-->
                                 <!--                                <div class="layui-input-inline">-->
