--- a/html/user/login.html
+++ b/html/user/login.html
@@ -48,7 +48,7 @@
                     <label for="L_phone" class="layui-form-label">手机</label>
                     <div class="layui-input-inline">
                         <input type="text" id="L_phone" name="username" required
-                               lay-verify="phone" autocomplete="off"
+                                 autocomplete="off"
                                class="layui-input">
                     </div>
                 </div>
